fix overlap of notification with spinner

--- a/src/context/NotificationContext/components/NotificationContainer/NotificationContainer.module.scss
+++ b/src/context/NotificationContext/components/NotificationContainer/NotificationContainer.module.scss
@@ -4,6 +4,7 @@
   position: fixed;
   bottom: 2rem;
   left: 2rem;
+  z-index: 2;
 
   @include sm {
     right: 2rem;
